UI fixes for Dark Mode (issue #110)

--- a/src/pages/clippingsMgr.css
+++ b/src/pages/clippingsMgr.css
@@ -1188,6 +1188,7 @@ ul.fancytree-container {
     order: 1;
     flex: 1 1 auto;
     margin-right: 4px;
+    background-color: transparent;
 }
 
 #import-dlg #import-clippings-file-path:placeholder-shown {
