--- a/src/style/clippingLabelPicker.css
+++ b/src/style/clippingLabelPicker.css
@@ -6,6 +6,7 @@
 body[data-laf="true"]:not([data-os="mac"]) #clipping-label-picker.browser-style {
     background-color: #fdfefd;
     border-color: #d7d7db;
+    color: black;
 }
 
 body[data-laf="true"]:not([data-os="mac"]) #clipping-label-picker.browser-style:hover {
